--- a/question_5.ipynb
+++ b/question_5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "question_5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMOJv+Pr+HA89w2PfqUlRQl",
+      "authorship_tag": "ABX9TyMfxvpzDxopoRoZi6gVyiG2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,53 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "! pip install -q pyspark"
+      ],
+      "metadata": {
+        "id": "Nwm220vrLE7u"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
+        "! wget -q https://dlcdn.apache.org/spark/spark-3.2.1/spark-3.2.1-bin-hadoop3.2.tgz\n",
+        "! tar xf spark-3.2.1-bin-hadoop3.2.tgz"
+      ],
+      "metadata": {
+        "id": "tm2oMbgaLMYW"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark import SparkConf, SparkContext"
+      ],
+      "metadata": {
+        "id": "WvckkK9QNLjw"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conf = SparkConf().setMaster(\"local\").setAppName(\"DegreesOfSeparation\")\n",
+        "sc = SparkContext(conf = conf)"
+      ],
+      "metadata": {
+        "id": "1rurfGKALTKa"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### BFS Search"
@@ -47,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "rOjOc5bD79KB"
       },
@@ -101,10 +148,128 @@
         "g.BFS(2)"
       ],
       "metadata": {
-        "id": "zlNRwyY78U5k"
+        "id": "zlNRwyY78U5k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "36fc307b-beda-4c7a-fa5f-17eaa2e8cd36"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Following is Breadth First Traversal (starting from vertex 2)\n",
+            "2--->0--->3--->1--->"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "startCharacterID = 5306 #SpiderMan\n",
+        "targetCharacterID = 14  #ADAM 3,031 (who?)\n",
+        "hitCounter = sc.accumulator(0)\n",
+        "\n",
+        "def convertToBFS(line):\n",
+        "\tfields = line.split()\n",
+        "\tconnections = []\n",
+        "\theroID = int(fields[0])\n",
+        "\tfor connection in fields[1:]:\n",
+        "\t\tconnections.append(int(connection))\n",
+        "\tdistance = 9999 # infinity\n",
+        "\tcolor = \"WHITE\"\n",
+        "\tif (heroID == startCharacterID):\n",
+        "\t\tcolor = \"GRAY\"\n",
+        "\t\tdistance = 0\n",
+        "\treturn (heroID, (connections, distance, color))\n",
+        "\n",
+        "def bfsMap(node):\n",
+        "\n",
+        "\theroID = node[0]\n",
+        "\tconnections = node[1][0]\n",
+        "\tdistance = node[1][1]\n",
+        "\tcolor = node[1][2]\n",
+        "\tresults = []\n",
+        "\tif (color == \"GRAY\"):\n",
+        "\t\tfor connection in connections:\n",
+        "\t\t\tnewDistance = distance + 1\n",
+        "\t\t\tif (connection == targetCharacterID):\n",
+        "\t\t\t\thitCounter.add(1)\n",
+        "\t\t\t\t\n",
+        "\t\t\tresults.append( (connection, ([], newDistance, \"GRAY\") ) )\n",
+        "\t\tcolor = \"BLACK\" # color 'Black' the processed node\n",
+        "\t# Emit the input node so we don't lose it\n",
+        "\tresults.append( (heroID, (connections, distance, color)) )\n",
+        "\treturn results\n",
+        "\n",
+        "def bfsReduce(data1, data2):\n",
+        "\tconnection1, connection2 = data1[0], data2[0]\n",
+        "\tdistance1, distance2 = data1[1], data2[1]\n",
+        "\tcolor1, color2 = data1[2], data2[2]\n",
+        "\tedges, distance, color = [], 9999, color1\n",
+        "\tif (len(connection1) > 0):\n",
+        "\t\tedges.extend(connection1) #use extend b/c append all elements within list\n",
+        "\n",
+        "\tif (len(connection2) > 0):\n",
+        "\t\tedges.extend(connection2)\n",
+        "\n",
+        "\t# Preserve the min distance\n",
+        "\tif (distance > distance1):\n",
+        "\t\tdistance = distance1\n",
+        "\n",
+        "\tif (distance > distance2):\n",
+        "\t\tdistance = distance2\n",
+        "\n",
+        "\t# Preserve the darkest color\n",
+        "\tif ( (color1 == 'WHITE') and (color2 == 'GRAY' or color2 == 'BLACK')):\n",
+        "\t\tcolor = color2\n",
+        "\n",
+        "\tif ( (color1 == 'GRAY') and (color2 == 'BLACK') ):\n",
+        "\t\tcolor = color2\n",
+        "\n",
+        "\tif ( (color2 == 'WHITE') and (color1 == 'GRAY' or color1 == 'BLACK')):\n",
+        "\t\tcolor = color1\n",
+        "\n",
+        "\tif ( (color2 == 'GRAY') and (color1 == 'BLACK') ):\n",
+        "\t\tcolor = color1\n",
+        "\n",
+        "\treturn (edges, distance, color)\n",
+        "graph = sc.textFile(\"Marvel-graph.txt\")\n",
+        "rdd = graph.map(convertToBFS)\n",
+        "for iteration in range(10):\n",
+        "\tprint(\"Running BFS iteration# \" + str(iteration+1))\n",
+        "\tmapper = rdd.flatMap(bfsMap)\n",
+        "\tprint(\"Processing \" + str(mapper.count()) + \"values\")\n",
+        "\tif (hitCounter.value > 0):\n",
+        "\t\tprint(\"Hit the target character! From \" + str(hitCounter.value)+ \"different directions.\")\n",
+        "\t\tbreak\n",
+        "\trdd = mapper.reduceByKey(bfsReduce)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ufgREBabLWZn",
+        "outputId": "9e0031c3-53c6-4394-96b9-41193e5a28c4"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Running BFS iteration# 1\n",
+            "Processing 8330values\n",
+            "Running BFS iteration# 2\n",
+            "Processing 220615values\n",
+            "Hit the target character! From 1different directions.\n"
+          ]
+        }
+      ]
     }
   ]
 }
