--- a/question_5.ipynb
+++ b/question_5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "question_5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMfxvpzDxopoRoZi6gVyiG2",
+      "authorship_tag": "ABX9TyNqTlqWZ855h3SgRVf9ch/j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,7 +152,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "36fc307b-beda-4c7a-fa5f-17eaa2e8cd36"
+        "outputId": "0dc7ca4d-3cd9-4019-caab-f2b02c335de7"
       },
       "execution_count": 6,
       "outputs": [
@@ -169,7 +169,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "https://github.com/shakshimaheshwari/MostPopularSuperHeroAndDegreeofSeperation/tree/master/MostPopularSuperHero\n",
         "startCharacterID = 5306 #SpiderMan\n",
         "targetCharacterID = 14  #ADAM 3,031 (who?)\n",
         "hitCounter = sc.accumulator(0)\n",
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ufgREBabLWZn",
-        "outputId": "9e0031c3-53c6-4394-96b9-41193e5a28c4"
+        "outputId": "47bb18f2-2a8d-4282-9ba4-214f7086c912"
       },
       "execution_count": 7,
       "outputs": [
@@ -267,6 +267,50 @@
             "Running BFS iteration# 2\n",
             "Processing 220615values\n",
             "Hit the target character! From 1different directions.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def parseLine(text):\n",
+        "    fields = text.split()\n",
+        "    superheroId = int(fields[0])\n",
+        "    return (superheroId, len(fields)-1)\n",
+        "\n",
+        "\n",
+        "def parseNames(text):\n",
+        "    fields = text.split('\\\"')\n",
+        "    return (int(fields[0]), fields[1].encode(\"utf-8\"))\n",
+        "\n",
+        "input = sc.textFile(\"Marvel-graph.txt\")\n",
+        "superHeroIds = input.map(parseLine)\n",
+        "\n",
+        "names = sc.textFile(\"Marvel-names.txt\")\n",
+        "namesRdd = names.map(parseNames)\n",
+        "\n",
+        "totalCount = superHeroIds.reduceByKey(lambda x,y : x+y)\n",
+        "flippedCount = totalCount.map(lambda item: (item[1], item[0]))\n",
+        "mostPouplar= flippedCount.max()\n",
+        "\n",
+        "mostPopularName = namesRdd.lookup(mostPouplar[1])[0]\n",
+        "print(str(mostPopularName) + \" is most popular superhero , with \" + str(mostPouplar[0]) + \" co-apperances\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nfx614Unl6RH",
+        "outputId": "9eb680e3-5d03-4528-b600-62c76f93d00e"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b'CAPTAIN AMERICA' is most popular superhero , with 1933 co-apperances\n"
           ]
         }
       ]
